[package]
name = "tissuebox"
description = "A todo list for programming"
license = "MIT"
version = "1.2.0"
edition = "2021"

[dependencies]
arboard = { version = "3.4.1", default-features = false }
clap = { version = "4.5.17", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
